--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+/node_modules
 jspm_packages/
 
 # Typescript v1 declaration files
@@ -68,5 +68,6 @@ yarn-error.log
 # Yarn Integrity file
 .yarn-integrity
 
-.vscode/
-/node_modules
+# vscode 
+.vscode
+
